# break-even

./: README.md  index.html  package.json  styles.css  vite.config.js
.github/: FUNDING.yml
.github/workflows/: publish.yml  release.yml
public/: manifest.json
src/: App.svelte  BalanceBars.svelte  BlackJack.svelte  CardList.svelte  ConfirmNewGameModal.svelte  ControlBar.svelte  SettingsModal.svelte  app.scss  stores.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: BlackJack.svelte  CardList.svelte  CollapsibleSection.svelte  Navbar.svelte
src/utils/: BasicStrategy.ts
